lab01ReyhanArif-copy/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
D:\Program Files\BlueJ\lib\bluejcore.jar;D:\Program Files\BlueJ\lib\junit-jupiter-5.5.2.jar;D:\Program Files\BlueJ\lib\junit-jupiter-api-5.5.2.jar;D:\Program Files\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;D:\Program Files\BlueJ\lib\junit-jupiter-migrationsupport-5.5.2.jar;D:\Program Files\BlueJ\lib\junit-jupiter-params-5.5.2.jar;D:\Program Files\BlueJ\lib\junit-platform-commons-1.5.2.jar;D:\Program Files\BlueJ\lib\junit-platform-console-1.5.2.jar;D:\Program Files\BlueJ\lib\junit-platform-console-standalone-1.5.2.jar;D:\Program Files\BlueJ\lib\junit-platform-engine-1.5.2.jar;D:\Program Files\BlueJ\lib\junit-platform-launcher-1.5.2.jar;D:\Program Files\BlueJ\lib\junit-platform-reporting-1.5.2.jar;D:\Program Files\BlueJ\lib\junit-platform-runner-1.5.2.jar;D:\Program Files\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;D:\Program Files\BlueJ\lib\junit-platform-testkit-1.5.2.jar;D:\Program Files\BlueJ\lib\junit-quickcheck-core-0.9.jar;D:\Program Files\BlueJ\lib\junit-vintage-engine-5.5.2.jar;D:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;D:\Program Files\BlueJ\lib\hamcrest-library-1.3.jar;D:\Program Files\BlueJ\lib\lang-stride.jar;D:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;D:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;D:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;D:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;D:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;D:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;D:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;D:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\arifr\lab01ReyhanArif
-d
C:\Users\arifr\lab01ReyhanArif\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\arifr\lab01ReyhanArif\Picture.java
<---- end of javadoc command ---->
Loading source file C:\Users\arifr\lab01ReyhanArif\Picture.java...
Constructing Javadoc information...
C:\Users\arifr\lab01ReyhanArif\Picture.java:10: error: cannot find symbol
    private Square field1;
            ^
  symbol:   class Square
  location: class Picture
C:\Users\arifr\lab01ReyhanArif\Picture.java:11: error: cannot find symbol
    private Square field2;
            ^
  symbol:   class Square
  location: class Picture
C:\Users\arifr\lab01ReyhanArif\Picture.java:12: error: cannot find symbol
    private Square field3;
            ^
  symbol:   class Square
  location: class Picture
C:\Users\arifr\lab01ReyhanArif\Picture.java:13: error: cannot find symbol
    private Square field4;
            ^
  symbol:   class Square
  location: class Picture
C:\Users\arifr\lab01ReyhanArif\Picture.java:14: error: cannot find symbol
    private Square goal1;
            ^
  symbol:   class Square
  location: class Picture
C:\Users\arifr\lab01ReyhanArif\Picture.java:15: error: cannot find symbol
    private Square goal2;
            ^
  symbol:   class Square
  location: class Picture
C:\Users\arifr\lab01ReyhanArif\Picture.java:16: error: cannot find symbol
    private Square goal3;
            ^
  symbol:   class Square
  location: class Picture
C:\Users\arifr\lab01ReyhanArif\Picture.java:17: error: cannot find symbol
    private Square goalcov;
            ^
  symbol:   class Square
  location: class Picture
C:\Users\arifr\lab01ReyhanArif\Picture.java:18: error: cannot find symbol
    private Square goalline;
            ^
  symbol:   class Square
  location: class Picture
C:\Users\arifr\lab01ReyhanArif\Picture.java:19: error: cannot find symbol
    private Square the10;
            ^
  symbol:   class Square
  location: class Picture
C:\Users\arifr\lab01ReyhanArif\Picture.java:20: error: cannot find symbol
    private Square the18;
            ^
  symbol:   class Square
  location: class Picture
C:\Users\arifr\lab01ReyhanArif\Picture.java:21: error: cannot find symbol
    private Square sky1;
            ^
  symbol:   class Square
  location: class Picture
C:\Users\arifr\lab01ReyhanArif\Picture.java:22: error: cannot find symbol
    private Square sky2;
            ^
  symbol:   class Square
  location: class Picture
C:\Users\arifr\lab01ReyhanArif\Picture.java:23: error: cannot find symbol
    private Person kicker;
            ^
  symbol:   class Person
  location: class Picture
C:\Users\arifr\lab01ReyhanArif\Picture.java:24: error: cannot find symbol
    private Person goalie;
            ^
  symbol:   class Person
  location: class Picture
C:\Users\arifr\lab01ReyhanArif\Picture.java:25: error: cannot find symbol
    private Triangle lglove;
            ^
  symbol:   class Triangle
  location: class Picture
C:\Users\arifr\lab01ReyhanArif\Picture.java:26: error: cannot find symbol
    private Triangle rglove;
            ^
  symbol:   class Triangle
  location: class Picture
C:\Users\arifr\lab01ReyhanArif\Picture.java:27: error: cannot find symbol
    private Circle ball;
            ^
  symbol:   class Circle
  location: class Picture
18 errors
